[gd_scene load_steps=14 format=3 uid="uid://hcfwkhghoe0"]

[ext_resource type="Script" path="res://playground.gd" id="1_fxj0f"]
[ext_resource type="Sky" uid="uid://cbbdl23q60wak" path="res://addons/ThirdPersonTemplate/Environments/SkyBox.res" id="2_vp21c"]
[ext_resource type="Material" uid="uid://bly25nr0aqsv3" path="res://addons/ThirdPersonTemplate/Environments/Materials/BlueGrid.material" id="3_anjpt"]
[ext_resource type="Material" uid="uid://d3up41bo0vjj0" path="res://addons/ThirdPersonTemplate/Environments/Materials/OrangeGrid.material" id="4_kii6k"]
[ext_resource type="Material" uid="uid://ddpgp1pyklffr" path="res://addons/ThirdPersonTemplate/Environments/Materials/GreenGrid.material" id="6_5rtke"]
[ext_resource type="Material" uid="uid://bquocw2a8n271" path="res://addons/ThirdPersonTemplate/Environments/Materials/GreyGrid.material" id="6_7xeo2"]
[ext_resource type="Material" uid="uid://cpk3jtowelhgh" path="res://addons/ThirdPersonTemplate/Environments/Materials/PingkGrid.material" id="7_xstjq"]
[ext_resource type="PackedScene" uid="uid://dq6tvhqcy2aps" path="res://addons/EasyMenus/Scenes/main_menu.tscn" id="8_wwgdg"]

[sub_resource type="Environment" id="Environment_qyvd4"]
background_mode = 2
background_color = Color(0.647059, 0.909804, 0.917647, 1)
sky = ExtResource("2_vp21c")
adjustment_enabled = true
adjustment_saturation = 1.15

[sub_resource type="BoxShape3D" id="BoxShape3D_52k67"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4vyt"]
bg_color = Color(0.913725, 0, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15lav"]
bg_color = Color(0, 0.756863, 0.329412, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_f0egn"]
size = Vector3(390.957, 1222.22, 529.805)

[node name="World" type="Node"]
script = ExtResource("1_fxj0f")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.892271, -0.274443, 0.358516, 2.02684e-08, 0.794054, 0.607847, -0.451501, 0.542364, -0.708511, 0, 2.76815, 9.26053)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qyvd4")

[node name="PlayerSpawner" type="Marker3D" parent="."]

[node name="Level" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61855, -2.2406, 0)

[node name="Floor" type="CSGBox3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.14482, 0)
use_collision = true
size = Vector3(47.5872, 0.1, 47.791)
material = ExtResource("3_anjpt")

[node name="CSGBox3D2" type="CSGBox3D" parent="Level"]
transform = Transform3D(0.833182, 0, 0.552999, 0, 1, 0, -0.552999, 0, 0.833182, 16.5416, 3.19482, -15.014)
use_collision = true
size = Vector3(4, 6, 8)
material = ExtResource("4_kii6k")

[node name="CSGBox3D6" type="CSGBox3D" parent="Level"]
transform = Transform3D(-0.318513, 0, 0.947919, 0, 1, 0, -0.947919, 0, -0.318513, 0.541599, 13.1948, 3.986)
use_collision = true
size = Vector3(4, 6, 8)
material = ExtResource("4_kii6k")

[node name="CSGBox3D3" type="CSGBox3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 2.19482, -6.9983)
use_collision = true
size = Vector3(6, 8, 6)
material = ExtResource("6_5rtke")

[node name="CSGBox3D4" type="CSGBox3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.19482, -6.9983)
use_collision = true
size = Vector3(4, 4, 6)
material = ExtResource("6_5rtke")

[node name="CSGBox3D5" type="CSGBox3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.19482, -10.9983)
use_collision = true
size = Vector3(4, 2, 2)
material = ExtResource("6_5rtke")

[node name="Node3D" type="Node3D" parent="Level"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -17.521, 4.76836e-07, -18.7606)

[node name="CSGBox3D4" type="CSGBox3D" parent="Level/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.233154, 0.69482, -0.0343475)
use_collision = true
size = Vector3(8, 1, 1)
material = ExtResource("7_xstjq")

[node name="CSGBox3D5" type="CSGBox3D" parent="Level/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.76685, 1.69482, -0.0343475)
use_collision = true
size = Vector3(4, 1, 1)
material = ExtResource("7_xstjq")

[node name="CSGBox3D6" type="CSGBox3D" parent="Level/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.76685, 2.69482, -0.0343475)
use_collision = true
material = ExtResource("7_xstjq")

[node name="CSGBox3D" type="CSGBox3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.19482, 4)
use_collision = true
size = Vector3(24, 10, 16)
material = ExtResource("6_7xeo2")

[node name="CSGBox3D5" type="CSGBox3D" parent="Level/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, -3, -7)
operation = 2
size = Vector3(4, 6, 2)
material = ExtResource("6_7xeo2")

[node name="CSGBox3D6" type="CSGBox3D" parent="Level/CSGBox3D"]
transform = Transform3D(-8.9407e-08, 0, 1, 0, 1, 0, -1, 0, -8.9407e-08, 11, -3, 0)
operation = 2
size = Vector3(12, 6, 2)
material = ExtResource("6_7xeo2")

[node name="CSGBox3D7" type="CSGBox3D" parent="Level/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
operation = 2
size = Vector3(22, 10, 14)
material = ExtResource("6_7xeo2")

[node name="Box" type="RigidBody3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12494, 3.96956, 5.03166)

[node name="CSGBox3D" type="CSGBox3D" parent="Level/Box"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Box"]
shape = SubResource("BoxShape3D_52k67")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("8_wwgdg")]

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_f4vyt")
theme_override_styles/fill = SubResource("StyleBoxFlat_15lav")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpaceControl" type="Control" parent="CanvasLayer/HUD/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel" type="Label" parent="CanvasLayer/HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 80
text = "3"
horizontal_alignment = 1

[node name="AmmoLabel" type="Label" parent="CanvasLayer/HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 80
text = "10
"
horizontal_alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://character/character.tscn", "res://weapons/bullet_hole_decal.tscn")
spawn_path = NodePath("..")

[node name="ServerCam" type="Camera3D" parent="."]
transform = Transform3D(0.121939, 0, 0.992538, 0, 1, 0, -0.992538, 0, 0.121939, 27.2046, 0, 0)
current = true

[node name="DeathArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -680.777, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathArea3D"]
shape = SubResource("BoxShape3D_f0egn")

[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
[connection signal="body_entered" from="DeathArea3D" to="." method="_on_death_area_3d_body_entered"]
